# bobby-turtle

./: .dockerignore  .env.prod  .env.template  .gitignore  .taplo.toml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  fly.toml  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  deploy.yml  fly.yml  general.yml  lint.yml
.sqlx/: query-0300a2b9c9ff293ef3be194cf821ad8d71f820b9858ef0f4f8903f8b3c6bfabd.json  query-0326dcd736fe3d5833cfdb16869ba213516c49d309e990caa6ec8ffb4980797d.json  query-0f602e579f56a85250526c7410cb67aced6357e782207b2de4c268370ff0dfb2.json  query-1b665211997fc509ad9abec43b8cbbe6b6bfc097302b040c0c031ab1a6720aa1.json  query-1ebd40b1a5475e940c60b2cdaf2a42d5cd4c3a8740adadb518ebf408cc3feaa0.json  query-213809e0210fc2263856a8d73fe2e0f659ad9e02418ae557c9d8adf0697dced2.json  query-216c2325cd3f13d77ea27d80bd1a5a55456f55e79ef0b5c7a69a017034ea7130.json  query-21e6ba00161953d568c19cb8049a232b95e98650cb08ef6acdb5035f4ebbaa54.json  query-27f1fe23f932895e3b261f29a13bd62bd118200630b5a6bd803eab60dc8990b1.json  query-28879177f94fb37e350ca1174959ba05425bc121d5000cbd96536d03fa3bd3ec.json  query-38065c349ae1078cbafda2dd77a4d39cfbdc0dc1a7fc43763650d4970eb484d9.json  query-399e237d0d44435b877d86fd0cc2c393d73d62e48890ac9d8a1233b28f5353ff.json  query-46f47ac6f7d8d64e24efe40eb6e7943f7dc41b291c2ddd4ad319fdceb3d0c543.json  query-4a9bcccdc60e27d90114282c62fb51384fcd3834001efde2e7598102b854a85c.json  query-4b241bc7ee41e79d7a6033e1d82f9e29a3f475d15557e59930ef633f97b77006.json  query-4b498171cd99a1b4b65b4c00e31afcf93a5977eaca5e6bf383e6cb4c370a140a.json  query-4ee56464f9be8fd55799e4cbbaed0ab9b5e719e60e4ce84fa5e7a283a0889dee.json  query-512f428d2f0418c2c8a720e8cda5368dd02278f679dde9378b155b30f1aa97c5.json  query-61e29b9a0ab9616a315c5aedec2c0cc431c11937e6cb5a2bc25cdd577868d162.json  query-69d1c022da8f2bceadd2f5a0704cb6c8ff768fd25dc93e1b3675a17920e535c8.json  query-6f056eb9bde9c82cdb466b3c2369ee2fbe2a04c453d06275ebd453ba89c41b77.json  query-71a7b1cc93d3d278a8f2c2a5a7d7711dd05a804e55539d8d69c16349dc1c1086.json  query-724d827dbb21ecccfa9d2724da94f5faaea6979769178d21230be232da06ee1c.json  query-74b98a1aa1b2540b2e476c4c335584a65e3dadf6f697f230bc44ad7ad2282af8.json  query-753cc8235a0b6bab1e15e04dd8d8dc96d6e806fd480c1c82c04305a78578cbe0.json  query-7a3f58f48796f76384457464685f569b4ec1bcf2676625eab33f477aa8aee795.json  query-7ed72aae170743d47bd29c8b5f0c9d7e612a025640d79c8b9cd6cb0b94e0c9f0.json  query-7fba55f36c2e01cd1bdb6a0b9fc2b4da90b6fda031ac155082f8541cd36ab3e2.json  query-84ab17f40037b611796229c8ddd4ad41da15a250851919910ac3d5774642d296.json  query-8a23ae77ef9131c0919d0b0e71edaf29be58b940a04d8d3bd1c5f144c3007fe9.json  query-9265b43c7b5916b8b624495e4e4b03b92361d2fad9f1493cfaca52cb68629a66.json  query-929c1a09e7ec6db9de515ea3876b5251c7ac85a78fd93832dedcf8878165c436.json  query-96d3bc3ce77e782ff3cdd426730aad7580da558742aca3ebe9b729f8229a895a.json  query-9711acec0b316d4d520cd4d24f065965f4d96f0efbcd2aed11c1f693e81a91f1.json  query-98243954d386ac54edf029108a2085a6eb2ae57d1ed8b6d1f5feb9af9c830200.json  query-99c1a030644dedf1a3390f61b30bdb40d11cc65507c8ffdabe1a6f825ea1649b.json  query-9cee65b952a7a1cd7fd07fc7cbe5c88d7bdc05b97df56922ac4625567c148068.json  query-9d4ff5a1417624f1bec098f07d9f8de8023001a45f12308e9aff439e086dc125.json  query-a10f741155a2604a9782136d6422c3a15c2a3c404c088a56ad67460eaa14cad9.json  query-a35c0a4e6db691a003dc6418fa7ce522f9a741e3afa89890637a4dac5e4e975b.json  (+18 more)
config/: base.yaml  local.yaml  production.yaml  stickers.yaml  users.yaml
gaia/: Cargo.toml
gaia/src/: app.rs  database.rs  email.rs  lib.rs  stickers.rs
gardener/: Cargo.toml
gardener/src/: auth.rs  email_client.rs  lib.rs  main.rs  routes.rs
gardener/src/routes/: health_check.rs  resume.rs  telebot.rs  telegram.rs  test.rs  user.rs
gardener/src/routes/resume/: projects.rs
gardener/src/routes/user/: change_password.rs  login.rs  password_change.rs  password_reset.rs  sign_up.rs  sign_up_verification.rs
migrations/: 20230929075011_init_user_table.sql  20230930031556_create_chat_table.sql  20240417194946_users.sql  20240419124548_chatrooms.sql  20240419124558_chatlogs.sql  20240423152715_jobs.sql  20240502082044_alter-one-off-job-due-col.sql  20240502104401_one-off-job-due-not-null.sql  20240513111653_resume_details.sql  20240522112516_create_users_table.sql  20240525005159_update_user_table_with_names.sql  20240603042857_user_account_verification.sql  20240604081807_reset_tokens.sql  20240604160717_edit_about_me.sql  20240605161700_telegram_tokens.sql  20240607013221_add_project_demos.sql  20240611091143_chatroom_reference.sql
my_app/: Cargo.toml
my_app/src/: jobs.rs  main.rs  settings.rs  start.rs
my_app/src/jobs/: greetings.rs  reminders.rs
my_app/src/settings/: telemetry.rs
my_bot/: Cargo.toml
my_bot/src/: lib.rs  sticker.rs
my_server/: Cargo.toml
scripts/: doc.sh  init_db.sh
src/: auth.rs  bot.rs  chat.rs  jobs.rs  lib.rs  listener.rs  main.rs  routes.rs  settings.rs  start.rs  startup.rs  stickers.rs  telemetry.rs  tracing.rs  types.rs  web.rs  webhook.rs
src/bot/: calendar.rs  chatroom.rs  command.rs  command_handler.rs  commands.rs  filters.rs  handlers.rs  job.rs  job_text.rs  me.rs  member.rs  message.rs  message_handler.rs  mod.rs  occurence.rs  room.rs  stickers.rs  time_pick.rs
src/bot/callbacks/: date.rs  occurrence.rs  remind_text.rs  time.rs
src/handlers/: admin.rs  command.rs  mod.rs  owner.rs  system.rs  user.rs  vulgar.rs
src/jobs/: greetings.rs  mod.rs  normal_reminder.rs  reminders.rs
src/routes/: auth.rs  health_check.rs  mod.rs  resume.rs
src/settings/: app.rs  application.rs  database.rs  environment.rs  mod.rs  stickers.rs  telemetry.rs  users.rs  utility.rs
src/utils/: datetime.rs  mod.rs  parser.rs  stickers.rs
telebot/: Cargo.toml
turtle-bot/: Cargo.toml
turtle-bot/src/: bot.rs  callbacks.rs  chat.rs  chatroom.rs  commands.rs  jobs.rs  lib.rs  main.rs  member.rs
turtle-bot/src/callbacks/: date.rs  expired.rs  occurrence.rs  remind_text.rs  time.rs
turtle-bot/src/jobs/: greetings.rs  reminders.rs
(+6 files in other folders)
