[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = ["turtle-bot", "gardener"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.82"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[workspace.dependencies.sqlx]
default-features = false
features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate"]
version = "0.7.4"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev]
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).

[profile.release]
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).
strip = true
debug = 0

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
