[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = ["gaia", "turtle-bot", "gardener"]
default-members = ["gardener"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.86"
async-openai = "0.23.2"
async-trait = "0.1.80"
axum = "0.7.5"
axum-extra = "0.9.3"
axum-login = "0.15.1"
axum_typed_multipart = "0.11.1"
dotenvy = "0.15.7"
figment = "0.10.17"
indexmap = "2.2.6"
mime_guess = "2.0.4"
password-auth = "1.0.0"
passwords = "3.1.16"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "json"] }
secrecy = "0.8.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
teloxide = { version = "0.13.0", features = ["macros", "webhooks", "webhooks-axum"] }
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["serde-human-readable", "macros"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.11.0"
tower = "0.5.0"
tower-http = "0.5.2"
tower-sessions = { version = "0.12.2", default-features = false }
tower-sessions-sqlx-store = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }
utoipa = "4.2.0"
utoipa-swagger-ui = "7.1.0"
utoipauto = "0.1.10"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
validator = "0.18.1"
chrono-tz = "0.9.0"

[workspace.dependencies.sqlx]
default-features = false
features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "macros", "migrate"]
version = "0.8.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev]
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).

[profile.release]
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).
strip = true
debug = 0

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
