[package]
name = "gaia"
version.workspace = true
edition.workspace = true
description = "just like the great mother earth, this crate stores resources for us to thrive in"

[dependencies]
dotenvy = { workspace = true }
figment = { workspace = true, features = ["yaml", "env"] }
secrecy = { workspace = true, features = ["serde"] }

serde.workspace = true
sqlx.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[lints]
workspace = true
