[package]
name = "gardener"
version.workspace = true
edition.workspace = true

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.80"
axum = "0.7.5"
axum-login = "0.15.1"
indexmap = "2.2.6"
password-auth = "1.0.0"
passwords = "3.1.16"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tower-sessions = { version = "0.12.2", default-features = false, features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.12.0", features = ["postgres"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipauto = "0.1.10"
validator = { version = "0.18.1", features = ["derive"] }

serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
gaia = { version = "0.1.0", path = "../gaia" }
sqlx.workspace = true

[lints]
workspace = true
