[package]
name = "gardener"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.80"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
axum-login = "0.15.1"
indexmap = "2.2.6"
password-auth = "1.0.0"
passwords = "3.1.16"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tower-sessions = { version = "0.12.2", default-features = false, features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.12.0", features = ["postgres"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum", "vendored"] }
utoipauto = "0.1.10"
validator = { version = "0.18.1", features = ["derive"] }

anyhow.workspace = true
chrono-tz.workspace = true
chrono.workspace = true
gaia = { version = "0.1.0", path = "../gaia" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
turtle-bot = { version = "0.1.0", path = "../turtle-bot" }
uuid.workspace = true

[lints]
workspace = true
