[package]
name = "gardener"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true, features = ["cookie"] }
axum-login = { workspace = true }
axum_typed_multipart = { workspace = true }
chrono.workspace = true
gaia = { version = "0.1.0", path = "../gaia" }
indexmap = { workspace = true }
mime_guess = { workspace = true }
password-auth = { workspace = true }
passwords = { workspace = true }
rand.workspace = true
reqwest.workspace = true
secrecy = { workspace = true }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
teloxide.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
tower-sessions = { workspace = true, features = ["signed"] }
tower-sessions-sqlx-store = { workspace = true, features = ["postgres"] }
tracing.workspace = true
turtle-bot = { version = "0.1.0", path = "../turtle-bot" }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum", "vendored"] }
utoipauto = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true, features = ["derive"] }

[lints]
workspace = true
