[package]
name = "my_app"
version.workspace = true
edition.workspace = true

[dependencies]
# chrono = { workspace = true }
# chrono-tz.workspace = true
# dotenvy.workspace = true
# figment.workspace = true
my_bot = { version = "0.1.0", path = "../my_bot" }
secrecy.workspace = true
serde.workspace = true
sqlx.workspace = true
teloxide.workspace = true
tokio.workspace = true
tokio-cron-scheduler.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
