[package]
name = "turtle-bot"
version.workspace = true
edition.workspace = true

[dependencies]
async-openai = "0.23.2"
tokio-cron-scheduler = { version = "0.10.0", features = ["signal"] }

anyhow.workspace = true
chrono-tz.workspace = true
chrono.workspace = true
gaia = { version = "0.1.0", path = "../gaia" }
rand.workspace = true
sqlx.workspace = true
teloxide.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
