[package]
name = "turtle-bot"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-openai = { workspace = true }
chrono-tz.workspace = true
chrono.workspace = true
gaia = { version = "0.1.0", path = "../gaia" }
rand.workspace = true
sqlx.workspace = true
teloxide.workspace = true
thiserror.workspace = true
tokio-cron-scheduler = { workspace = true, features = ["signal"] }
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
