[package]
name = "turtle-bot"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-openai = { workspace = true }
chrono-tz = { workspace = true }
gaia = { version = "0.1.0", path = "../gaia" }
rand.workspace = true
sqlx.workspace = true
teloxide.workspace = true
thiserror.workspace = true
time = { workspace = true }
tokio.workspace = true
tokio-cron-scheduler = { workspace = true, features = ["signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
